--- a/css/style.css
+++ b/css/style.css
@@ -226,3 +226,18 @@ section{
     min-width: 25px;
     border-radius: 0.5em;
 }
+#contact{
+    background-color: var(--second-background);
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+}
+form .entrer-box{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
