--- a/css/style.css
+++ b/css/style.css
@@ -240,4 +240,58 @@ form .entrer-box{
     display: flex;
     flex-direction: column;
     align-items: baseline;
+    gap: 1em;
+}
+.entrer-box span{
+    font-size: 1.5em;
+}
+form input{
+    font-size: 1.3em;
+    padding: 1em 5em;
+    border-radius: 0.5em;
+    border: none;
+    outline: none;
+}
+form input:focus{
+    background: rgb(229, 229, 229);
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    padding: 30px 0;
+    background-color: var(--background);
+}
+.footer .social-icons{
+    text-align: center;
+    padding-bottom: 25px;
+    color: #686868;
+}
+.footer .social-icons a{
+    font-size: 25px;
+    color: #686868;
+    border: 2px solid #686868;
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 10px;
+    transition: 0.3s ease-in-out;
+}
+.footer .social-icons a:hover{
+    transform: scale(1.2) translateY(-10px);
+    background-color: var(--second-background);
+    color: #ffffff;
+    box-shadow: 0 0 10px #ffffff;
+}
+.footer .copyright{
+    text-align: center;
+    font-size: 16px;
+    color: #ffffff;
 }
