--- a/css/style.css
+++ b/css/style.css
@@ -303,46 +303,91 @@ form input:focus{
 }
 
 /* Footer */
-.footer{
+.footer {
+    width: 100%;
+    background-color: var(--background);
+    padding: 10%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    color: #ffffff;
+}
+.footer p{
+    text-align: center;
+}
+
+/* Grille des colonnes */
+.footer-container {
+    width: 75%;
+    margin: auto;
+    padding-left: 10%;
+    padding-right: 1%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+}
+.footer-column h3{
+    padding-top: 0%;
+    padding-bottom: 10.5%;
+}
+.footer-column h4 {
+    margin-bottom: 12%;
+    font-weight: 600;
+}
+.footer-column p{
+    font-size: 15px;
+}
+/* Liens */
+.liens {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    padding: 30px 0;
-    background-color: var(--background);
+    gap: 1.5em;
+    font-size: 15px;
 }
-.footer .social-icons{
-    text-align: center;
-    padding-bottom: 25px;
-    color: #686868;
+.footer-column a {
+    color: #cccccc;
+    text-decoration: none;
+    transition: 0.3s;
 }
-.footer .social-icons a{
-    font-size: 25px;
-    color: #686868;
-    border: 2px solid #686868;
-    width: 42px;
-    height: 42px;
-    line-height: 42px;
-    display: inline-block;
+.footer-column a:hover {
+    color: #ffffff;
+}
+
+/* Icônes sociales */
+.social-icons {
     text-align: center;
-    border-radius: 50%;
-    margin: 0 10px;
+    padding: 30px 0 10px;
+}
+
+.social-icons a {
+    font-size: 25px; 
+    color: #686868; 
+    border: 2px solid #686868; 
+    width: 42px; 
+    height: 42px; 
+    line-height: 42px; 
+    display: inline-block; 
+    text-align: center; 
+    border-radius: 50%; 
+    margin: 0 10px; 
     transition: 0.3s ease-in-out;
 }
-.footer .social-icons a:hover{
-    transform: scale(1.2) translateY(-10px); /* Zoom + décalage */
-    background-color: var(--second-background);
-    color: #ffffff;
-    box-shadow: 0 0 10px #ffffff;
+
+.social-icons a:hover {
+transform: scale(1.2) translateY(-10px); /* Zoom + décalage */ 
+background-color: var(--second-background); 
+color: #ffffff; 
+box-shadow: 0 0 10px #ffffff;
 }
-.footer .copyright{
+
+/* Copyright */
+.footer .copyright {
     text-align: center;
-    font-size: 16px;
-    color: #ffffff;
+    font-size: 15px;
+    padding-top: 15px;
+    color: #aaaaaa;
 }
+
 
 /*Responsive design*/
 /*Téléphone*/
